@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/09/25 20:15:50 $
+ @(#) $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/12 10:19:36 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/09/25 20:15:50 $ by $Author: brian $
+ Last Modified $Date: 2006/10/12 10:19:36 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: udp.c,v $
+ Revision 0.9.2.2  2006/10/12 10:19:36  brian
+ - removed redundant debug flags
+
  Revision 0.9.2.1  2006/09/25 20:15:50  brian
  - rationalized to strinet and strxnet
 
@@ -200,10 +203,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/09/25 20:15:50 $"
+#ident "@(#) $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/12 10:19:36 $"
 
 static char const ident[] =
-    "$RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/09/25 20:15:50 $";
+    "$RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/12 10:19:36 $";
 
 /*
  *  This driver provides a somewhat different approach to UDP that the inet
@@ -282,7 +285,7 @@ static char const ident[] =
 #define UDP_DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define UDP_EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS"
 #define UDP_COPYRIGHT	"Copyright (c) 1997-2006  OpenSS7 Corporation.  All Rights Reserved."
-#define UDP_REVISION	"OpenSS7 $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.1 $) $Date: 2006/09/25 20:15:50 $"
+#define UDP_REVISION	"OpenSS7 $RCSfile: udp.c,v $ $Name:  $($Revision: 0.9.2.2 $) $Date: 2006/10/12 10:19:36 $"
 #define UDP_DEVICE	"SVR 4.2 STREAMS UDP Driver"
 #define UDP_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define UDP_LICENSE	"GPL"
@@ -667,7 +670,7 @@ tp_alloc(void)
 /* Must always be bottom-half versions to avoid lock badness.  But give these
  * different names to avoid conflict with generic definitions.  */
 
-//#if defined CONFIG_STREAMS_NOIRQ || defined CONFIG_STREAMS_TEST
+//#if defined CONFIG_STREAMS_NOIRQ || defined _TEST
 #if 1
 
 #define spin_lock_str2(__lkp, __flags) \
